k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage-poc
  labels:
    app.kubernetes.io/name: backstage-poc
